--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -1,6 +1,5 @@
 @import 'base';
-@import '~normalize.css/normalize';
-@import '~frow/css/frow.min';
+@import '~bootstrap-grid/bootstrap-grid';
 @import 'utils';
 @import './fonts/roboto/roboto';
 @import './fonts/material-design-icons/material-icons';
@@ -22,6 +21,23 @@ html, body {
 *:before,
 *:after {
 	box-sizing: inherit;
+	font-family: 'robotoregular', Helvetica, Arial, sans-serif;
+	font-size:16px;
+}
+
+a {
+	text-decoration: none;
+}
+
+ol, ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+h1,h2,h3,h4,h5,h6,p {
+	margin: 0;
+	padding: 0;
 }
 
 @import 'rootAdmin';
