--- a/src/styles/rootAdmin.scss
+++ b/src/styles/rootAdmin.scss
@@ -14,7 +14,8 @@
 			padding: 10px;
 			width: 100%;
 			min-height:45px;
-			white-space: nowrap;		
+			white-space: nowrap;
+			color: #444;		
 
 			&.nav-active,
 			&:focus,
@@ -58,10 +59,15 @@
 			vertical-align: top;
 		}
 
-		.titlebar-content {
-			display: inline-block;
-			width: 100%;
-			padding-top:7px;
+		.admin-titlebar-controls {
+			float: left;
+			margin-right: 20px;
+		}
+
+		.titlebar-content {	
+			margin-left: 260px;	
+			line-height: 70px;
+
 			input {
 				margin-bottom: 0;
 			}
@@ -70,7 +76,12 @@
 		.titlebar-menu-toggle {
 			cursor: pointer;
 			margin-left:15px;
-			padding: 8px;
+			line-height: 70px;
+			display: inline-block;
+		}
+
+		.titlebar-menu-toggle i {
+			vertical-align: middle;
 		}
 
 		.titlebar-menu-toggle:hover,
@@ -79,16 +90,16 @@
 			color: #e08433;
 		}
 
-		.admin-search-box-container {
-			position: relative;
-		}
-
 		.search-icon {
 			position: absolute;
-			left: 8px;
-			top: 7px;
+			left: 7px;
+			top: 25px;
 			color: #fff;
 			transition: color 0.2s ease-in-out;
+		}
+
+		.admin-search-box-container form {
+			position: relative;
 		}
 
 		.admin-search-box {
@@ -129,7 +140,6 @@
 		.filter-arrow {
 			cursor: pointer;
 			display: inline-block;
-			height: 36px;
 			padding-left:7px;
 		}
 
@@ -150,7 +160,7 @@
 	.filter-container {
 		display:inline-block;
 		position: relative;
-		padding: 0 5px;
+		line-height: 32px;
 		z-index:9;
 	}
 
@@ -177,6 +187,7 @@
 		padding: 16px 16px;
 		border-bottom: 1px solid #e5e5e5;
 		font-family: 'robotolight', Helvetica, Arial, sans-serif;
+		line-height: normal;
 	}
 
 	.filter-dropdown li:hover,
