--- a/src/styles/rootAdmin.scss
+++ b/src/styles/rootAdmin.scss
@@ -242,4 +242,84 @@
 		font-family: 'roboto_condensedregular', 'robotobold', 'robotoregular', Helvetica, Arial, sans-serif;
 		font-weight: normal;
 	}
+
+	.search-results-list {
+		background-color: #fff;
+		border-radius: 2px;
+		box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+		position: relative;
+	}
+
+	.card-head header {
+		display:inline-block;
+		font-size: 18px;
+		padding: 11px 24px 11px 16px;
+	}
+
+	.card-head .exit {
+		display: inline-block;
+		padding-top: 5px;
+		padding-right: 5px;
+		float: right;
+		cursor: pointer;
+	}
+
+	.card-head .exit i {
+		padding: 3px;
+		border-radius: 50%;
+		background-color: #fff;
+	}
+
+	.card-head .exit:hover i {
+		background-color: rgba(12, 12, 12, 0.07);
+	}
+
+	.card-body .tile {
+		position: relative;
+		display: table;
+		table-layout: fixed;
+		width: 100%;
+		height: 70px;
+		color: #313534;
+		padding: 10px 5px 10px 0;
+		border-bottom: 1px solid #d7d7d7;
+		cursor: pointer;
+
+		&:last-child{
+			border-bottom: 0;
+		}
+
+		&:hover {
+			background-color: rgba(0,0,0,0.1);
+		}
+
+		.tile-content {
+			display: table-cell;
+			margin: 0;
+			padding: 0 0 0 16px;
+			font-size:16px;
+			vertical-align: middle;
+		}
+
+		.icon-attended,
+		.icon-preprint {
+			display: table-cell;
+			vertical-align: middle;
+			text-align: center;
+			min-width:46px;
+			width: 46px;
+		}
+
+		.icon-attended {
+			color: #005958;
+		}
+
+		.info-small {
+			font-size: 14px;
+		}
+	}
+
+	.empty-list {
+		padding: 10px 15px;
+	}
 }
